[package]
authors = ["EP <eupn@protonmail.com>"]
categories = ["embedded", "no-std"]
description = "A SiLabs EMlib bindings for Happy Gecko MCU (EFM32HG222F64)"
keywords = [ "embedded", "arm", "cortex-m0", "hal", "no-std", "ffi" ]
license = "MIT OR Apache-2.0"
name = "emlib"
repository = "https://github.com/eupn/emlib"
version = "0.0.1"

[build-dependencies]
cc = "1.0.4"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.12"

# disable both incremental compilation and parallel codegen to reduce the chances of running into
# rust-lang/rust#47074
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
